small tweaks to ensure proper subject detail wrapping

--- a/StudentoMainProject/Scripts/Components/StudentMaterial/StudentMaterial.css
+++ b/StudentoMainProject/Scripts/Components/StudentMaterial/StudentMaterial.css
@@ -110,6 +110,11 @@
     margin-left: auto;
 }
 
+.flex-right{
+    display: flex;
+    justify-content: flex-end;
+}
+
 .multiple-file-input{
     width: 0.1px;
 	height: 0.1px;
